openmediavault-docker-gui (3.0.6) UNRELEASED; urgency=medium

  * Bug fixes to container and image backend

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 21 Jan 2016 15:57:44 +0100

openmediavault-docker-gui (3.0.5) stable; urgency=medium

  * Make it possible to update linuxserver.io images from repo tab
  * Various bug fixes

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 16 Jan 2016 12:00:17 +0100

openmediavault-docker-gui (3.0.4) stable; urgency=medium

  * Add timestamp to image object
  * Make it possible to modify running container 

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 12 Jan 2016 13:29:22 +0100

openmediavault-docker-gui (3.0.3) stable; urgency=medium

  * Minor tweaks to the repo tab 
  * Add logos to the linuxserver.io docker images
  * Add php5-imagick dependancy
  * Make it possible to edit port forwarding rows
  * Make it possible to edit environment variable rows
  * Make it possible to edit bind mount rows
  * Make it possible to edit volumes from rows
  * Add tooltips to buttons
  * Add info button to repo tab entries
  * Reload repo tab when a new image is pulled
  * Make repo tab hidden if plugin is not enabled

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Wed, 06 Jan 2016 08:55:59 +0100

openmediavault-docker-gui (3.0.2) stable; urgency=medium

  * Add r/o mode to bind mounts
  * Stability fixes to Docker service restart
  * Add linuxserver.io images to the repo tab
  * Usability improvements on the repo tab

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 Jan 2016 23:34:25 +0100

openmediavault-docker-gui (3.0.1) stable; urgency=medium

  * Fix postrm script to use systemd
  * Add fixes to ensure proper upgrade from 0.2.x plugin branch

 -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Mon, 04 Jan 2016 12:40:21 +0100

openmediavault-docker-gui (3.0.0) stable; urgency=low

  * Make plugin OMV 3.x compatible